--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+.dropdown-menu {
+  height: 200px;
+  width: 100%;
+  overflow-y: scroll;
+}
+
+.dropdown-toggle{
+  background-color: white !important;
+  color: black !important;
+  width: 100%;
+}
