--- a/src/component/stream-video/canvas.css
+++ b/src/component/stream-video/canvas.css
@@ -10,7 +10,7 @@
     border-radius: 6px;
     border: 2px #00B6ED solid;
     background: url('../../assets/image/snappink.png') center no-repeat;
-    height: 100%;
+    height: 100vh;
     width: 100%;
   }
   
@@ -30,7 +30,7 @@
   /* button group */
   
   .ag-btn-group {
-    height: 70px;
+    height: 100vh;
     width: calc(100% - 60px);
     margin: 0 auto;
     position: absolute;
@@ -42,10 +42,6 @@
     align-items: center;
   }
   
-  .ag-btn-group:hover,
-  .ag-btn-group.active {
-    background: rgba(18, 74, 99, .8);
-  }
   
   .ag-btn {
     z-index: 12;
