--- a/src/App.css
+++ b/src/App.css
@@ -38,13 +38,21 @@
 }
 
 .dropdown-menu {
-  height: 200px;
+  /* height: 200px; */
   width: 100%;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
 .dropdown-toggle{
   background-color: white !important;
   color: black !important;
   width: 100%;
+}
+
+.breadcrumb{ 
+  margin-bottom: 0px;
+  padding-left: 0px;
+  padding-top: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
 }
