--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,9 @@
 
 .breadcrumb{ 
   margin-bottom: 0px;
-  padding-left: 0px;
-  padding-top: 0px;
-  padding-right: 0px;
-  padding-bottom: 0px;
+  padding: unset !important;
+  margin-bottom: unset !important;
+  background-color: unset !important;
+  border-radius: unset !important;
+  height: 20px;
 }
