--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,12 @@
   border-radius: unset !important;
   height: 20px;
 }
+
+.btn-primary {
+  border: unset !important;
+}
+
+.btn-primary:hover {
+  /* background-color: #F3A3AD !important; */
+  border: unset;
+}
