--- a/src/components/TableLiveFit/styles.css
+++ b/src/components/TableLiveFit/styles.css
@@ -82,7 +82,8 @@ input .forom-control{
 }
 
 .input-group-prepend{
-  border: unset !important;
+  border: 1px solid rgb(206, 212, 218);
+  height: 35px;
 }
 
 input:focus
